--- a/packages/ui/src/styles/preset.css
+++ b/packages/ui/src/styles/preset.css
@@ -174,10 +174,6 @@
   }
 
   body {
-    @apply bg-background text-foreground antialiased font-sans;
-  }
-
-  code {
-    @apply font-mono;
+    @apply bg-background text-foreground antialiased;
   }
 }
